# nomos-block-explorer

./: .dockerignore  .gitignore  .pre-commit-config.yaml  .prettierignore  .prettierrc  Dockerfile  README.md  http-client.env.json  node.rest  package-lock.json  package.json  pyproject.toml  requirements.txt
hooks/: prettier.sh
src/: __init__.py  app.py  lifespan.py  logs.py  main.py  router.py
src/api/: router.py  streams.py  utils.py
src/api/v1/: blocks.py  health.py  index.py  router.py  transactions.py
src/api/v1/serializers/: blocks.py  transactions.py
src/core/: api.py  app.py  db.py  encodings.py  models.py  sqlmodel.py  types.py
src/db/: blocks.py  transaction.py
src/db/clients/: __init__.py  base.py  sqlite.py
src/frontend/: __init__.py  mount.py  router.py  statics.py
src/models/: __init__.py  aliases.py  block.py  health.py
src/models/header/: __init__.py  proof_of_leadership.py  public.py
src/models/transactions/: __init__.py  notes.py  transaction.py
src/models/transactions/operations/: __init__.py  contents.py  operation.py  proofs.py
src/node/: lifespan.py
src/node/api/: base.py  builder.py  fake.py  http.py
src/node/manager/: base.py  builder.py  docker.py  fake.py  noop.py
src/node/models/: blocks.py  health.py  transactions.py
src/utils/: datetime.py  protocols.py  random.py
static/: app.js  index.html  styles.css
static/components/: BlocksTable.js  HealthPill.js  Router.js  TransactionsTable.js
static/lib/: api.js  constants.js  utils.js
static/pages/: BlockDetail.js  Home.js  TransactionDetail.js
(+12 files in other folders)
